Refactor AnnotationCommand for improved readability and functionality